--- a/style.css
+++ b/style.css
@@ -593,16 +593,17 @@ body {
   #cards {
     width: 100%;
     height: calc(100vh - 120px);
-    padding-top: 0.5rem;
+    padding-top: 0.3rem;
     display: grid;
     grid-template-columns: repeat(
       auto-fill,
       minmax(clamp(140px, 22vw, 220px), 1fr)
     );
-    gap: clamp(0.3rem, 1vw, 0.8rem);
+    gap: clamp(0.2rem, 0.5vw, 0.5rem);
     overflow-y: auto;
     scrollbar-width: none;
     scroll-behavior: smooth;
+    position: relative;
   }
 
   /* ------------------------------CARD DESIGN-------------------------------- */
@@ -767,13 +768,15 @@ body {
   /* ----------------------------ASIDE BAR EVOLUTION CHAIN-------------------------------- */
   .divider {
     width: 100%;
+    position: absolute;
+    inset: 0;
 
     .evolutionLine {
       width: 100%;
       background-color: var(--glass-border);
       padding: 0.5rem;
       margin: 0.5rem 0;
-      display: grid;
+      display: flex;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 0.5rem;
       border: 1px solid var(--border-color);
@@ -1008,5 +1011,57 @@ body {
   to {
     opacity: 1;
     transform: translate(-50%, -50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .card.featured {
+    grid-column: span 1;
+    grid-row: span 1;
+    min-height: unset;
+    height: clamp(180px, 28vw, 240px);
+  }
+}
+
+#searchContainer #cards .card.featured {
+  grid-column: span 2;
+  grid-row: span 2;
+  min-height: clamp(360px, 45vw, 520px);
+  max-width: 500px;
+  z-index: 2;
+  height: 100%;
+  max-height: 500px;
+  margin: auto;
+
+  .pokemon-img {
+    transform: scale(150);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  h4 {
+    font-size: 2rem;
+  }
+}
+
+#searchContainer #cards .card.ramdom {
+  min-height: clamp(360px, 45vw, 520px);
+  max-width: 500px;
+  height: 100%;
+  max-height: 500px;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  .pokemon-img {
+    transform: scale(150);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  h4 {
+    font-size: 2rem;
   }
 }
