--- a/style.css
+++ b/style.css
@@ -223,9 +223,7 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 0 1rem;
-  background-color: var(--glass-bg);
-  backdrop-filter: blur(10px);
-  box-shadow: var(--shadow-sm);
+  background-color: var(--backgroundColor);
   z-index: 1000;
   border-bottom: 1px solid var(--primary-gradient);
   transition: all var(--transition-normal);
@@ -333,9 +331,15 @@ body {
   left: -100%;
   width: 100vw;
   height: 100vh;
-  background-color: var(--backgroundColor);
+  backdrop-filter: blur(10px);
+  border: 1px solid var(--glass-border);
+  /* background-color: var(--glass-bg); */
   z-index: 1000;
   transition: all var(--transition-fast);
+
+  button{
+    background: var(--backgroundColor);
+  }
 }
 
 #sideBarMenutogle > div {
@@ -371,11 +375,12 @@ body {
   gap: 0.5rem;
   position: relative;
   color: var(--text-primary);
+  overflow-y: scroll;
 
   /* -----------------------------ASIDE BAR--------------------------------- */
   #searchWrapper {
     width: 0;
-    height: 100%;
+    height: 100vh;
     padding: 0;
     color: var(--text-primary);
     border-radius: 16px;
@@ -524,6 +529,10 @@ body {
     padding-bottom: 0;
     position: relative;
     overflow: hidden;
+  }
+
+  .searchAndCardWrapper {
+    display: flex;
   }
 
   /* ------------------------------SEARCH CONTAINER AND NAVBAR TOGGLER-------------------------------- */
@@ -921,7 +930,7 @@ body {
     width: 60vw;
     height: 80vh;
     position: fixed;
-    top: 130px;
+    top: 70px;
     z-index: 9999;
     display: block;
   }
